students/YarmolaAleksandr/task_01_R/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longread-blog
  labels:
    name: longread-blog
    environment: production
