students/YarmolaAleksandr/task_01_R/k8s/base/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: longread-blog
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: frontend
