students/YarmolaAleksandr/task_01_R/k8s/base/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: longread-blog
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis
